# adventofcode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.bat  flake.nix  get-input.bat
2015/: CMakeLists.txt  build.sh  main.cpp  profile.sh  profileRelease.sh  run.sh  runRelease.sh
2015/DayTemplate/include/: Day.hpp
2015/DayTemplate/src/: Day.cpp  Day.hpp
2015/days/Day1/src/: Day.hpp
2015/days/Day10/src/: Day.hpp
2015/days/Day11/src/: Day.hpp
2015/days/Day12/src/: Day.hpp
2015/days/Day13/src/: Day.hpp
2015/days/Day14/src/: Day.hpp
2015/days/Day15/src/: Day.hpp
2015/days/Day16/: CMakeLists.txt
2015/days/Day16/src/: Day.hpp
2015/days/Day17/src/: Day.hpp
2015/days/Day18/src/: Day.hpp
2015/days/Day19/src/: Day.hpp
2015/days/Day2/: CMakeLists.txt
2015/days/Day2/src/: Day.hpp
2015/days/Day20/: CMakeLists.txt
2015/days/Day20/include/: Day.hpp
2015/days/Day20/src/: Day.cpp  Day.hpp
2015/days/Day21/include/: Day.hpp
2015/days/Day21/src/: Day.cpp
2015/days/Day3/: CMakeLists.txt
2015/days/Day3/src/: Day.hpp
2015/days/Day4/: CMakeLists.txt
2015/days/Day4/src/: Day.hpp
2015/days/Day5/src/: Day.hpp
2015/days/Day6/src/: Day.hpp
2015/days/Day7/: CMakeLists.txt
2015/days/Day7/include/: Circuit.hpp  Day.hpp  Gate.hpp  Includes.hpp  Interpreter.hpp  Lexer.hpp  Wire.hpp
2015/days/Day7/src/: Gate.cpp  Wire.cpp
2015/days/Day8/src/: Day.hpp
2015/days/Day9/: CMakeLists.txt
2015/days/Day9/src/: Day.hpp
2015/include/: IDay.hpp  Input.hpp  Timer.hpp
2015/include/utils/: Hashes.hpp  LinkedList.hpp  Range.hpp  StringUtils.hpp
2015/src/: IDay.cpp  Input.cpp  Timer.cpp
2015/src/utils/: StringUtils.cpp
2023/: CMakeLists.txt  README.md
2023/CMake/: cotire.cmake
2023/include/: CMakeLists.txt  day.hpp  timer.hpp
2023/include/util/: helperStructs.hpp  range.hpp  stringUtil.hpp
2023/src/: main.cpp
2023/src/include/: days.hpp
2023/src/include/days/Day1/: Day1.hpp
2023/src/include/days/Day10/: Day10.hpp
2023/src/include/days/Day11/: Day11.hpp
2023/src/include/days/Day12/: Day12.hpp
2023/src/include/days/Day13/: Day13.hpp
2023/src/include/days/Day14/: Day14.hpp
2023/src/include/days/Day15/: Day15.hpp
2023/src/include/days/Day16/: Day16.hpp
2023/src/include/days/Day17/: Day17.hpp
2023/src/include/days/Day18/: Day18.hpp
2023/src/include/days/Day19/: Day19.hpp
2023/src/include/days/Day2/: Day2.hpp
2023/src/include/days/Day3/: Day3.hpp
2023/src/include/days/Day4/: Day4.hpp
2023/src/include/days/Day5/: Day5.hpp
2023/src/include/days/Day6/: Day6.hpp
2023/src/include/days/Day7/: Day7.hpp  Hand.hpp
2023/src/include/days/Day8/: Day8.hpp
2023/src/include/days/Day9/: Day9.hpp
2023/src/include/days/DayTemplate/: DayTemplate.hpp
2024/: CMakeLists.txt  build.sh  buildRelease.sh  createDay.sh  main.cpp  profile.sh  run.sh  script_base.sh
2024/DayTemplate/: CMakeLists.txt
2024/DayTemplate/include/: DayInput.hpp
2024/DayTemplate/src/: Day.cpp  Day.hpp
2024/cmake/: CPM.cmake
2024/days/Day1/: CMakeLists.txt
2024/days/Day1/src/: Day.cpp
2024/days/Day10/src/: Day.cpp
2024/days/Day11/src/: Day.cpp
2024/days/Day12/src/: Day.cpp
2024/days/Day13/src/: Day.cpp
2024/days/Day14/src/: Day.cpp
2024/days/Day15/src/: Day.cpp
2024/days/Day16/src/: Day.cpp
2024/days/Day17/src/: Day.cpp
2024/days/Day18/src/: Day.cpp
2024/days/Day19/src/: Day.cpp
2024/days/Day2/: CMakeLists.txt
2024/days/Day2/src/: Day.cpp
2024/days/Day20/src/: Day.cpp
2024/days/Day3/src/: Day.cpp
2024/days/Day4/src/: Day.cpp
2024/days/Day5/src/: Day.cpp
2024/days/Day6/src/: Day.cpp
2024/days/Day7/src/: Day.cpp
2024/days/Day8/include/: Day.hpp
2024/days/Day8/src/: Day.cpp
2024/days/Day9/src/: Day.cpp
2024/days/DayTemplate/src/: Day.hpp
2024/include/: IDay.hpp  Input.hpp  Timer.hpp  strutils.hpp
2024/include/utils/: Hashes.hpp  LinkedList.hpp  MathUtils.hpp  StringUtils.hpp
2024/src/: Input.cpp  Timer.cpp  strutils.cpp
2024/src/utils/: MathUtils.cpp  StringUtils.cpp
2025/: .clang-format  README.md  meson.build  runDebug.sh  runRelease.sh
2025/DayTemplate/: Day.cpp  Day.hpp  Input.hpp
2025/include/: IDay.hpp
2025/include/Days/: Day01.hpp  Day02.hpp  Day03.hpp  Day04.hpp  Day05.hpp  Day06.hpp  Day07.hpp
2025/include/Util/: MathUtil.hpp  StringUtil.hpp  Timer.hpp
2025/src/: IDay.cpp  main.cpp
2025/src/Days/: Day01.cpp  Day02.cpp  Day03.cpp  Day04.cpp  Day05.cpp  Day06.cpp  Day07.cpp
2025/src/Util/: StringUtil.cpp  Timer.cpp
2025/tools/: createDay.sh  createInput.sh  genDaysHeader.sh  getDays.sh
include/: day.hpp
src/: main.cpp
src/include/: days.hpp
